# m3u-parser

./: .gitignore  Cargo.toml  README.md
assets/: test.m3u
src/: lib.rs  main.rs
tests/: lib_tests.rs
